app/src/main/java/com/example/darkfox/trainingnotes/models/errors/FirestoreExceptionGettingAccountDoc.kt
package com.example.darkfox.trainingnotes.models.errors

class FirestoreExceptionGettingAccountDoc(val failCause:String) : Exception(failCause) {
}